deployment/gateways/intermediaire/gwi_deployment.yaml
# Deployment Gateway i
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sdci-gwi
spec:
  selector:
    matchLabels:
      app: sdci-gwi
  replicas: 1
  template:
    metadata:
      labels:
        app: sdci-gwi
    spec:
      containers:
      - name: sdci-gwi-container
        image: sdci-gateway:v2
        imagePullPolicy: Never
        ports:
        - containerPort: 8181
        resources:
          requests:
            cpu: "500m"
          limits:
            cpu: "1"
