deployment/gateways/intermediaire/gwi_cluster_ip.yaml
# Service ClusterIP for Gateway i
apiVersion: v1
kind: Service
metadata:
  name: sdci-gwi-clusterip
spec:
  selector:
    app: sdci-gwi
  ports:
  - protocol: TCP
    name: http    
    port: 8181
    targetPort: 8181
  type: ClusterIP
